--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "mpp",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@notionhq/client": "^2.2.0",
-    "next": "12.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
-    "react-toastify": "^9.0.8"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.9",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
-  }
+	"name": "mpp",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "CI=false && next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@notionhq/client": "^2.2.0",
+		"next": "12.3.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.4.0",
+		"react-toastify": "^9.0.8"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.9",
+		"eslint": "8.23.1",
+		"eslint-config-next": "12.3.0",
+		"postcss": "^8.4.16",
+		"tailwindcss": "^3.1.8"
+	}
 }
